# TahubuSF

./: .gitignore  CLAUDE_DESKTOP_FIX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENV_VARIABLES.md  LICENSE  README.md  SECURITY.md  TRANSPORT_GUIDE.md  claude_desktop_config.json  client.py  debug_sitefinity_api.py  demo_transports.py  direct_test.py  env_example  fastapi_http_test.py  inspector.html  linoserver.py  main.py  main_modular.py  pyproject.toml  quick_test.py  requirements-dev.txt  requirements.txt  run.py  run_fastapi.py  run_fastapi_dev.py  run_fastmcp.py  simple_server.py  startup.sh  temp_server.py  test_blog_post.py  test_fastapi.py  test_fastmcp_client.py  test_transports.py
.github/workflows/: sse_tahubusf.yml
docs/: code_structure.md
docs/contributing/: git-workflow.md  index.md  repro.md  style-guide.md
fastapi_server/: README.md  __init__.py  azure_deploy.py  config.py  env_example  main.py  routes.py  run.py  test.py  web.config  wsgi.py
fastapi_server/static/: index.html
fastapi_server/tests/: __init__.py  test_api.py
fastmcp_custom/: README.md  __init__.py  client.py  config.py  server.py  test_fastmcp.py
inspector/: index.html
inspector/css/: styles.css
inspector/js/: formatters.js  tools.js  utils.js
tahubu_sf/: __init__.py  app.py
tahubu_sf/api/: __init__.py  albums.py  blog_posts.py  blogs.py  calendars.py  document_libraries.py  documents.py  events.py  forms.py  images.py  list_items.py  lists.py  news.py  pages.py  search_indexes.py  section_presets.py  shared_content.py  sites.py  taxonomies.py  video_libraries.py  (+1 more)
(+4 files in other folders)
