[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tahubu_sf"
version = "0.1.0"
description = "Sitefinity MCP API Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.9.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "tenacity>=8.2.3",
    "fastmcp>=2.6.0",
    "requests>=2.31.0",
]

[tool.setuptools]
packages = ["tahubu_sf", "fastapi_server"]
